--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -417,7 +417,7 @@ body{
     box-sizing:border-box;
     font-family:Montserrat !important;
     animation:fade-anim 0.5s ease-in;
-    background-color: #f5f5f5;
+    background: #f5f5f5 !important;
 }
 
 .progress-cont{
