--- a/templates/login.html
+++ b/templates/login.html
@@ -61,7 +61,7 @@
   </div>
   
 </div><br>
-<a style="" class="btns-outlined" href="/livedemo">
+<a style="" class="" href="/livedemo">
     <div style="margin:10px auto;width:max-content ;" class="gen-flex-col">
         <img style="height:80px" src="static/icons/demo-icon.png" />
         <div style="" class="btns-outlined">See Live Demo</div>
@@ -69,7 +69,7 @@
 </a>
 <br>
 
-<a style="" class="btns-outlined" href="/pricing">
+<a style="" class="" href="/pricing">
     <div style="margin:10px auto;width:max-content ;" class="gen-flex-col">
         <img style="height:80px" src="static/icons/money-icon.png" />
         <div style="" class="btns-outlined">See Our Pricing</div>
