--- a/templates/index.html
+++ b/templates/index.html
@@ -94,9 +94,9 @@
             <div class="caption"></div>
         </div>
     </a>
-    <a class="nav-lin" href="/registration_form">
+    <a class="nav-lin" href="/user_registration_form">
         <div class="cont-card gen-flex-col">
-            <img style="height:40px" src="static/icons/reigistration-icon.png" />
+            <img style="height:40px" src="static/icons/registration-icon.png" />
             <div class="btn-desc">Event Registration</div>
             <div class="caption"></div>
         </div>
