--- a/templates/base.html
+++ b/templates/base.html
@@ -244,11 +244,12 @@
         {% block content %}
         {% endblock %}
     </div><br><br>
-    <div style="flex-direction: column;" class="physical_addr">
-      <div style="flex-direction: column;" class="general-flex">
-        <small>Having issues? Report them here for a quick response!</small>
-         <a href="/contact_form"> <div style="font-weight:500px" class="btns">Report Issues</div></a>
-      </div><br>
+    <div style="flex-direction: column !important;display:flex;justify-content: center;align-items: center;" class="physical_add general-flex">
+      <!-- <div style="flex-direction: column;" class=""> -->
+        <small style="width:100%;text-align: center;">Having issues? Report them here for a quick response!</small>
+         <a href="/contact_form"> <div style="font-weight:500px;transform:scale(0.8)" class="btns">Report Issues</div></a>
+      <!-- </div> -->
+      <br>
     </div><br>
     <div class="physical_addr">
       <label>powered by: Tech Xolutions(TechX)</label><br>
