--- a/templates/camm_pricing.html
+++ b/templates/camm_pricing.html
@@ -7,9 +7,9 @@
 <br><br>
 
 
-<div style="margin-top:50px; gap:15px"  class="margin-zero-auto general-flex-wrap">
+<div style="margin-top:50px; "  class="margin-zero-auto general-flex-wrap prices">
     <h2 class="margin-zero-auto">Subcription Packages</h2><br>
-    <div style="width:350px" class="general-card general-align-col-c">
+    <div style="width:300px" class="general-card general-align-col-c">
         <p style="background-color:red;" class="circle-bg">CB</p>
         <h2>CAMM Basic</h2>
         <h3 style="color:red" class="border-outline">Basic</h3>
@@ -23,7 +23,7 @@
         <!-- <a href="/subscribe?sub='basic'" style="width:90px;background-color:red;" class="btns">Choose</a ><br> -->
     </div>
 
-     <div style="width:350px" class="general-card general-align-col-c">
+     <div style="" class="general-card general-align-col-c">
         <p style="background-color:coral;" class="circle-bg">CS</p>
         <h2>CAMM Standard</h2>
         <h3 style="color:coral;border-color:coral" class="border-outline">Choice</h3>
@@ -37,7 +37,7 @@
         <!-- <a href="/subscribe?sub='standard'" style="width:90px;background-color:coral;" class="btns">Buy</a ><br> -->
     </div>
 
-    <div style="width:350px" class="general-card general-align-col-c">
+    <div style="" class="general-card general-align-col-c">
         <p style="background-color:#117A65 ;" class="circle-bg">CP</p>
         <h2>CAMM Premium</h2>
         <h3 style="color:#117A65 ;border-color:#117A65 " class="border-outline">Professional</h3>
