--- a/templates/registered_users.html
+++ b/templates/registered_users.html
@@ -15,10 +15,10 @@
     {% endwith %}
 </div>
 <br>
-<div style="justify-content: flex-start;padding:10px;width:70%;background-color: rgb(237, 238, 238);margin:0 auto;border-radius: 10px;" class="general-flex">
+<!-- <div style="justify-content: flex-start;padding:10px;width:70%;background-color: rgb(237, 238, 238);margin:0 auto;border-radius: 10px;" class="general-flex">
     <a style="background-color:;z-index:500" href="/registered_users" ><div><img style="height:35px" class="icons" src='static/icons/table-icon.png' /></div></a>
     <a style="background-color:;z-index:500"  href="/registrations" ><img style="height:35px" class="icons" src='static/icons/list-icon.png' /></a>
-</div><br>
+</div><br> -->
 
 
 <div class="container-fea">
