--- a/templates/view_member.html
+++ b/templates/view_member.html
@@ -20,10 +20,10 @@
 </div>
 <br><br><br>
 
-<div style="justify-content: flex-start;padding:10px;width:70%;background-color: rgb(237, 238, 238);margin:0 auto;border-radius: 10px;" class="general-flex">
+<!-- <div style="justify-content: flex-start;padding:10px;width:70%;background-color: rgb(237, 238, 238);margin:0 auto;border-radius: 10px;" class="general-flex">
     <a style="background-color: ;z-index:500" href="/registered_users" ><img style="height:35px" class="icons" src='static/icons/table-icon.png' /></a>
     <a style="background-color: ;z-index:500" href="/registrations" ><img style="height:35px" class="icons" src='static/icons/list-icon.png' /></a>
-</div>
+</div> -->
 <div class="session-title">
     <h2 style="margin-bottom:0;">{{user.church_local}}</h2>
     <h2></h2><br>
