--- a/templates/login.html
+++ b/templates/login.html
@@ -64,7 +64,7 @@
 <a style="" class="" href="/livedemo">
     <div style="margin:10px auto;width:max-content ;" class="gen-flex-col">
         <img style="height:80px" src="static/icons/demo-icon.png" />
-        <div style="" class="btns-outlined">See Live Demo</div>
+        <div style="" class="btns-outlined">Explore Live Demo</div>
     </div>
 </a>
 <br>
