--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,7 @@
     <div>
       <div class="church-logo"><img style="height:inherit;border-radius: 15px;" src="{{ url_for('static', filename='images/camm_logo.png') }}" /></div>
       <h1 id="abbr-style" style="margin:10px auto;font-weight:800" >CAMM Sys+</h1>
-      <h3 style="margin-top:0px;color:rgb(65, 66, 66)" >Church Admin & Membership Management </h3>
+      <h3 style="margin-top:0px;color:rgb(65, 66, 66)" >Church Admin & Membership Management Sys</h3>
     </div>
 
     {% if current_user.is_authenticated and current_user.chrch_id %}
@@ -156,7 +156,7 @@
                       <a class="nav-link" href="/calender">Church Calender</a>
                     </li>
                     <li id="" class="saas-nav-item-chld">
-                      <a class="nav-link" href="/my_mission_registrations">Task Teams</a>
+                      <a class="nav-link" href="#">Task Teams</a>
                     </li>
                   </div>
                   <div class="line-sep"></div>
