--- a/templates/login.html
+++ b/templates/login.html
@@ -18,6 +18,9 @@
     {% endwith %}
 </div>
 <br><br>
+<div class="gen-flex-wrap" style="width:100%"><img style="height:400px" src="static/images/ad_pics.png" /></div>
+<div class="selling-tag">"Eswatini's Premier Church Platform for Membership, Communication, Event Management, Fundraising, and More!"</div>
+<br><br>
 <div style="" class="container">
    
   <div class="login-cont flex-general">
@@ -72,7 +75,7 @@
 <a style="" class="" href="/pricing">
     <div style="margin:10px auto;width:max-content ;" class="gen-flex-col">
         <img style="height:80px" src="static/icons/money-icon.png" />
-        <div style="" class="btns-outlined">See Our Pricing</div>
+        <div style="" class="btns-outlined">See Pricing</div>
     </div>
 </a>
 
