--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -2969,7 +2969,7 @@ small{
     
     }
 
-    .sel-tag{height:300px}
+    .sel-img{height:300px !important}
 
     .selling-tag{font-weight: 400;}
 
