--- a/templates/login.html
+++ b/templates/login.html
@@ -72,12 +72,21 @@
 </a>
 <br>
 
+
 <a style="" class="" href="/pricing">
     <div style="margin:10px auto;width:max-content ;" class="gen-flex-col">
         <img style="height:80px" src="static/icons/money-icon.png" />
         <div style="" class="btns-outlined">See Pricing</div>
     </div>
 </a>
+
+<br>
+    <a href="https://techxolutions.com/public_html/cammsys.apk" download><div class="app-download gen-flex-col">
+        <span><img style="height:200px" src="static/icons/app-download-icon.png"></span>
+        <span style="color:rgb(94, 95, 95)">Download App Here</span>
+        <span style="color:rgb(94, 95, 95);font-size:13px">Note: The app will soon be available in both Google Play and Apple Stores</span>
+    </div></a>
+<br>
 
 <script>
     
