--- a/templates/index.html
+++ b/templates/index.html
@@ -66,7 +66,7 @@
     </a>
 </div>
 {% endif %}
-<div class="dashboard-icons general-flex-wrap">
+<div style="margin:0 auto" class="dashboard-icons general-flex-wrap">
     <a class="nav-lin" href="/members_stats">
         <div class="cont-card gen-flex-col">
             <img style="height:40px" src="static/icons/statistics-icon.png" />
@@ -180,7 +180,7 @@
     <a href="https://techxolutions.com/public_html/cammsys.apk" download><div class="app-download gen-flex-col">
         <span><img style="height:200px" src="static/icons/app-download-icon.png"></span>
         <span style="color:rgb(94, 95, 95)">Download App Here</span>
-        <span style="color:rgb(94, 95, 95);font-size:13px">Soon the app will be available in Google Play and Apple Store</span>
+        <span style="color:rgb(94, 95, 95);font-size:13px;text-align: center;">Soon the app will be available in Google Play and Apple Store</span>
     </div></a>
     <br>
 
