--- a/templates/index.html
+++ b/templates/index.html
@@ -180,7 +180,7 @@
     <a href="https://techxolutions.com/public_html/cammsys.apk" download><div class="app-download gen-flex-col">
         <span><img style="height:200px" src="static/icons/app-download-icon.png"></span>
         <span style="color:rgb(94, 95, 95)">Download App Here</span>
-        <span style="color:rgb(94, 95, 95);font-size:13px;text-align: center;">Soon the app will be available in Google Play and Apple Store</span>
+        <span style="color:rgb(94, 95, 95);font-size:12px;text-align: center;">Note: The app will soon be available in both Google Play and Apple Stores</span>
     </div></a>
     <br>
 
