--- a/templates/login.html
+++ b/templates/login.html
@@ -73,12 +73,12 @@
 <br>
 
 
-<a style="" class="" href="/pricing">
+<!-- <a style="" class="" href="/pricing">
     <div style="margin:10px auto;width:max-content ;" class="gen-flex-col">
         <img style="height:80px" src="static/icons/money-icon.png" />
         <div style="" class="btns-outlined">See Pricing</div>
     </div>
-</a>
+</a> -->
 
 <br>
     <a href="https://techxolutions.com/public_html/cammsys.apk" download><div class="app-download gen-flex-col">
