--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -2378,6 +2378,43 @@ to{
     font-weight: 600px !important;
 }
 
+.icons-nav{
+    width:90%;
+    /* background-color: #0474be; */
+}
+
+.social-icons{
+    min-width: fit-content !important;
+}
+
+.note-cont{
+    position:relative;
+    height: max-content;
+    max-width: max-content;
+}
+
+.note-icons{
+    height:40px;
+}
+
+.icons-nav-item{
+    list-style-type: none;
+}
+
+.new-num-bg{
+    background-color: red;
+    color:white;
+    font-weight: 600;
+    font-size: 10px;
+    border-radius: 50%;
+    height: 10px;
+    width: 10px;
+    position: absolute;
+    right:-3px;
+    top:-7px;
+    padding: 3px;
+}
+
 .app-download{
     margin:10px auto;
 }
@@ -2598,7 +2635,7 @@ small{
     /* position:initial; */
     display:flex;
     justify-content:flex-end;
-    width:97%;
+    /* width:97%; */
 }
 
 .user-label{
@@ -3135,7 +3172,7 @@ small{
     display:flex;
     justify-content:flex-end;
     float:left;
-    width:97%;
+    /* width:97%; */
     //right:30px;
     //top:60px;
 }
