--- a/templates/base.html
+++ b/templates/base.html
@@ -71,7 +71,9 @@
                 <a class="nav-link" href="/calender" >
                   <div class="note-cont">
                     <img class="note-icons" src="static/icons/camm_new_event.png"   />
+                    {% if envts_nm > 0 %}
                     <div class="new-num-bg general-flex"><span>{{envts_nm}}</span></div>
+                    {%endif%}
                   </div>
                 </a>
               </li>
@@ -79,7 +81,9 @@
                 <a class="nav-link" href="/registered_users" >
                   <div class="note-cont">
                     <img class="note-icons" src="static/icons/camm_new_reg.png"   />
+                    {% if registered_nm > 0 %}
                     <div class="new-num-bg general-flex"><span>{{registered_nm}}</span></div>
+                    {% endif %}
                   </div>
                 </a>
               </li>
@@ -87,7 +91,9 @@
                 <a class="nav-link" href="/announcements" >
                   <div class="note-cont">
                     <img class="note-icons" src="static/icons/new_announce.png"   />
+                    {% if announce_nm > 0 %}
                     <div class="new-num-bg general-flex"><span>{{announce_nm}}</span></div>
+                    {%endif%}
                   </div>
                 </a>
               </li>
@@ -95,7 +101,9 @@
                 <a class="nav-link" href="/church_services" >
                   <div class="note-cont">
                     <img class="note-icons" src="static/icons/camm_new_serv.png"   />
+                    {% if services_nm > 0 %}
                     <div class="new-num-bg general-flex"><span>{{services_nm}}</span></div>
+                    {%endif%}
                   </div>
                 </a>
               </li>
