--- a/templates/calender.html
+++ b/templates/calender.html
@@ -26,10 +26,12 @@
                         {%else%}
                         <div style="color:#909090;font-size:13px;padding:5px" class="event-venue">Closed</div>
                         {%endif%}
+                    <div class="calender-img-bg"><img style="height:70px;opacity:0.1" src="static/icons/calender-icon.png" /></div>
                 </div>
             </a>
             {%endif%}
         {%endfor%}
+        
     </div>
     <small style="color:rgb(116, 116, 116);font-size: 10px;">To edit, click the event</small><br>
     {% endfor %}
