--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -315,8 +315,15 @@ tr:hover{
     box-shadow:-1px 1px 3px 0px rgba(0,0,0,0.5);
     width:370px;
     margin:10px auto;
+    border-radius: 20px;  
+}
+
+#announce .announce_card{
+    box-shadow:-1px 1px 3px 0px rgba(0,0,0,0.5);
+    min-width:370px;
+    width:60%;
+    margin:10px auto;
     border-radius: 20px;
-    
 }
 
 
@@ -328,17 +335,10 @@ tr:hover{
     width:60%;
     margin:10px auto;
     border-radius: 20px;
+    position:relative;
 }
 
-.announce_card{
-    display: flex;
-    /* padding: 20px; */
-    box-shadow:-1px 1px 3px 0px rgba(0,0,0,0.5);
-    min-width:370px;
-    width:60%;
-    margin:10px auto;
-    border-radius: 20px;
-}
+
 
 
 .display-none{
@@ -647,6 +647,29 @@ p{
     width:100%;
 }
 
+
+    
+.announce-img-bg{
+
+
+
+}
+
+.container .announce_card{
+    position:relative !important;
+}
+
+/* #announce .announce-card{
+    position:relative !important;
+} */
+
+.pocktes-img-bg{
+    position:absolute;
+    bottom:20px;
+    right:30px;
+    z-index:-1;
+}
+
 .announce-card h4{
     /* background-color: #0F75BC; */
     width:100%;
@@ -656,8 +679,8 @@ p{
 
 .container .announce-card{
     width:100%;
-    max-width:1100px;
-    box-shadow:none;
+    max-width:600px;
+    /* box-shadow:none; */
     padding: 0;
 }
 
@@ -2941,12 +2964,20 @@ small{
     min-height: 80px;
     border-left:4px solid var(--main-color);
     padding:10px;
+    position:relative;
 }
 
 .month{
     justify-content: flex-start;
     flex-wrap: wrap;
     margin:40px 0px;
+}
+
+.calender-img-bg{
+    position:absolute;
+    right:10px;
+    bottom:0px;
+    z-index: -1;
 }
 
 .calender-cont .line-sep{
