--- a/templates/church_services.html
+++ b/templates/church_services.html
@@ -14,6 +14,7 @@
                 {%if current_user.role == "admin_user" %}
                     <a href="/church_services_edit?srvc={{ser.dumps({'data':service.id})}}"><div class="btns">Edit</div></a>
                 {%endif %}
+        <div class="calender-img-bg"><img style="height:70px;opacity:0.1" src="static/icons/camm_new_serv.png" /></div>
         </div>
     </div>
 
