--- a/templates/pledges_pockets.html
+++ b/templates/pledges_pockets.html
@@ -21,6 +21,7 @@
     {% endwith %}
 </div>
 <br><br><br>
+
 <div class="user-info">
     <div style="" class="img-cont">
         <div width="90%"><img class="prf-image" src="static/images/{{church.image}}" alt=""/></div>
@@ -33,8 +34,10 @@
 <div style="max-width:1100px;margin:0 auto" class="group">
     <h1 style="text-align: center;margin:0 auto">Pledges Pockets</h1>
 </div>
+
 <br>
-<div style="flex-wrap:wrap !important;border:none;gap:15px;" class="container finish-sign">
+
+<div id="pockets" style="flex-wrap:wrap !important;border:none;gap:15px;" class="container finish-sign">
 
         {%for pocket in pledges_pockets %}
         <div style="align-items: center;" class="announce-card general-flex-col">
@@ -42,14 +45,12 @@
             <!-- Title  -->
             <div id="transaction_id" class="group">
                 <h2>{{pocket.title}}</h2>
-                
             </div>
 
             <!-- Dates  -->
             <div id="" class="group">
                 <label style="color:rgb(48, 47, 47)" class="cpations">Pledges are open within this duration:</labels>
                 <h4 style="width:100%;text-align: left;">{{pocket.start_date.strftime("%d %b %y")}} - {{pocket.end_date.strftime("%d %b %y")}}</h4>
-                
             </div>
 
             <!-- Information  -->
@@ -58,7 +59,7 @@
                 <p>{{pocket.information}}</p>
             </div>
             {% endif %}
-
+            
             {% if pocket.edited_by %}
             <div id="payment_platform" class="group">
                 <small  style="color:coral" class="captions"><i>Edited by: {{usr.query.get(pocket.edited_by).name}} 
@@ -76,18 +77,17 @@
                 <a href="/open_pledges_form_edit?pldgs={{ser.dumps({'data':pocket.id})}}"> <div class="btns">Edit</div></a><br>
             </div>
             {%endif%}
-
+            <div class="pocktes-img-bg"><img style="height:150px;opacity:0.1" src="static/icons/camm_pledges.png" /></div>
         </div>
+        
         {% endfor %}
 
 
 </div>
 
-
 <!-- <h1 style="text-align:center">Sorry, There are No Upcoming Events Open at the Moment!</h1>
 <h1 style="text-align:center">Check Again Later</h1>
 <br> -->
-
 
 <script>
 </script>
