--- a/templates/church_announcements.html
+++ b/templates/church_announcements.html
@@ -72,6 +72,13 @@
             </div>
             {%endif%}
             <div class="pocktes-img-bg"><img style="height:150px;opacity:0.05" src="static/icons/announcements-icon.png" /></div>
+            
+
+            <div style="margin-bottom: 1px;" class="group">Send also:</div>
+            <div style="flex-direction: row;justify-content: flex-start;align-items: center;gap:10px" class="group">
+                <a href="{{ generate_whatsapp_link(announce, usr, church) }}"><img style="height: 35px;" src="static/icons/whatsapp-col-icon.png" /></a>
+                <a href="/email_users?obj={{announce.id}}"><img style="height: 40px;" src="static/icons/email_icon.png" /></a>
+            </div>
         </div>
         {% endfor %}
 
