--- a/templates/base.html
+++ b/templates/base.html
@@ -48,6 +48,7 @@
             <div class="stroke"></div>
         </div>
 
+        <!-- Top  Navigation Icons  -->
         <div class="icons-nav general-flex">
               <li class="icons-nav-item active">
                 <a class="nav-link" href="/local_members" >
@@ -117,7 +118,7 @@
     {%endif%}
 
 
-    <div id="side-navig-bg" class="side-nav-bg ">
+    <div  id="side-navig-bg" class="side-nav-bg ">
       <div id="side-navig-cont" class="side-nav-cont move-to-appear gen-flex-col">
           <!-- <div class="close-btn"><div class="stroke"></div></div> -->
           <div class="general-flex"><img style="height:30px" src="static/icons/home.png" /><h3 style="color:white;text-align: left;">Menu</h3></div>
@@ -270,6 +271,7 @@
               </div>
         </div>
       </div>
+      <div onclick="closeSideNavFunc()" class="side-nav-background"></div>
     </div>
 
 
