--- a/templates/sermons.html
+++ b/templates/sermons.html
@@ -16,7 +16,7 @@
     }
     .subs{width:100%;max-width: 600px;margin:10px auto;border:1px solid rgb(70, 69, 69);color:rgb(53, 53, 53);
             font-weight:600;border-radius: 10px;}
-    .cap{position:absolute;}
+    .cap{position:absolute;left:9px}
     /* .sub-topic{background-color: rgb(0, 60, 255) !important; } */
 </style>
 
@@ -55,8 +55,9 @@
                 <div onclick="showHideSermons('{{sermon.id}}')" class="filter-subs general-flex months-off-tabs serm"  style="justify-content: flex-start;">
                     <div style="position:relative" class="">
                         <div style="font-weight: 600;" class=""><span class="off-num">{{loop.index}}</span> {{sermon.title}}</div>
-                        <div style="font-weight: 600;font-size:13px;color:red;" class="cap">{{sermon.timestamp.strftime("%d %b")}} - {{sermon.speaker}}</div>
+                        <div style="font-weight: 600;font-size:12px;color:red;width: max-content;" class="cap">{{sermon.timestamp.strftime("%d %b")}} - {{sermon.speaker}}</div>
                     </div>
+                    <div style="flex-grow: 1;"></div>
                     <img id="conta-handle-{{sermon.id}}" class="" style="height:25px;margin-left: 0px;" src="static/icons/content-handle-icon.png" />
                 </div>
                 <div id="sermon-cont-{{sermon.id}}" class="cont-offering">
