--- a/templates/base.html
+++ b/templates/base.html
@@ -261,6 +261,20 @@
                       <a class="nav-link" href="/offering">Offering Reports</a>
                     </li>
                   </div>
+
+                  <div class="line-sep"></div>
+                  <!-- Financials  -->
+                  <div id="nav-7" class="saas-nav-item">
+                    Bible Study Materials
+                  </div>
+                  <div id="nav-chld-7" class="pop-nav-cont">
+                    <li id="" class="saas-nav-item-chld">
+                      <a class="nav-link" href="/sermons_form">Make Sermon Notes</a>
+                    </li>
+                    <li id="" class="saas-nav-item-chld">
+                      <a class="nav-link" href="/sermons">Sermons</a>
+                    </li>
+                  </div>
                   <!-- <li class="other-nav-item">
                     <a class="nav-link" href="/registered_local">My Local Church</a>
                   </li> -->
